--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -234,6 +234,10 @@
 			$(".xa-timeChoose").hide();
 			var startDate = $('#startDate').val();
 			var endDate = $('#endDate').val();
+			if (startDate > endDate){
+				alert('开始时间不能大于结束时间！');
+				return
+			}
 			window.location.href = './?module=market_tool:channel_qrcode&model=settings_detail&action=get&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&workspace_id=market_tool:channel_qrcode&sid={{setting.id}}&fmt={{member.token}}&startDate='+startDate+'&endDate='+endDate
 		})
 		$('.xa-reset').click(function() {
