[会员列表]页面增加  ‘30天内购买频次’ 样式

--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -277,14 +277,15 @@
 		<tr>
 			<th >会员</th>
 			<th >会员等级</th>
-			<th  class="tx_sortable xui-Blue" style="width:8%" data-sort-attr='friend_count' data-sort-direction="up">好友数</th>
-			<th  class="tx_sortable xui-Blue" style="width:8%" data-sort-attr='integral' data-sort-direction="up">积分</th>
-			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='pay_money' data-sort-direction="up">消费总额</th>
-			<th  class="tx_sortable xui-Blue" style="width:9%" data-sort-attr='unit_price' data-sort-direction="up">客单价</th>
-			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='pay_times' data-sort-direction="up">购买次数</th>
+			<th  class="tx_sortable xui-Blue pl0 pr0" style="width:6%" data-sort-attr='friend_count' data-sort-direction="up">好友数</th>
+			<th  class="tx_sortable xui-Blue pl0 pr0" style="width:7%" data-sort-attr='integral' data-sort-direction="up">积分</th>
+			<th  class="tx_sortable xui-Blue" style="width:9%" data-sort-attr='pay_money' data-sort-direction="up">消费总额</th>
+			<th  class="tx_sortable xui-Blue pl0 pr0" style="width:9%" data-sort-attr='unit_price' data-sort-direction="up">客单价</th>
+			<th  class="tx_sortable xui-Blue pl0 pr0" style="width:8%" data-sort-attr='pay_times' data-sort-direction="up">购买次数</th>
+			<th  class="tx_sortable xui-Blue pl0 pr0" style="width:8%" data-sort-attr='purchase_frequency' data-sort-direction="up">30天内购买频次</th>
 
-			<th  class="tx_sortable xui-Blue" style="width:14%" data-sort-attr='created_at' data-init-sort="-created_at"  data-sort-direction="up">关注时间&来源 </th>
-			<th  style="width:10%">分组</th>
+			<th  class="tx_sortable xui-Blue pr0" style="width:10%" data-sort-attr='created_at' data-init-sort="-created_at"  data-sort-direction="up">关注时间&来源</th>
+			<th  class="pr0" style="width:10%">分组</th>
 
 			<th class="" style="width:10%">
 				操作
@@ -339,6 +340,9 @@
 			</td>
 			<td>
 				<div class="centerAlign">${ member.pay_times }</div>
+			</td>
+			<td>
+				<div class="centerAlign">10${ member.purchase_frequency }</div>
 			</td>
 			<td>
 				<div class="centerAlign">${ member.created_at }</div>
