--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_img.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_img.html
@@ -15,6 +15,9 @@
         border-radius:4px;
         border:1px solid #dfdfdf;
     }
+    .xui-attentionAlert {
+        display: none;
+    }
 </style>
 {% endblock %}
 {% block content-panel %}
@@ -33,7 +36,7 @@
         {% endif %}
     </section>
     {% endif %}
-	<section style="{% if not show_head %}margin-top:10%{% endif %}">
+	<section>
 		<div class="pr tc">
         	<img width="250" height="250" src="https://mp.weixin.qq.com/cgi-bin/showqrcode?ticket={{setting.ticket}}" class="xui-qrcode">
         	<img src="{% if head_img %}{{ head_img }}{% else %}/static/img/user-1.jpg{% endif %}" onerror="this.src='/static/img/user-1.jpg'" class="pa xui-memberHead" data-allow-autoplay=false/>
