--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_img.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_img.html
@@ -15,7 +15,7 @@
         border-radius:4px;
         border:1px solid #dfdfdf;
     }
-    .xui-attentionAlert {
+    .wui-attentionAlert {
         display: none;
     }
 </style>
