团购活动在手动关闭后模板消息问题

--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_img.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_img.html
@@ -15,6 +15,9 @@
         border-radius:4px;
         border:1px solid #dfdfdf;
     }
+    .wui-attentionAlert {
+        display: none;
+    }
 </style>
 {% endblock %}
 {% block content-panel %}
