--- a/weapp/static_v2/js/view/card_recharge_filter_view/template.html
+++ b/weapp/static_v2/js/view/card_recharge_filter_view/template.html
@@ -18,7 +18,7 @@
     </div>
     <div class="xui-col disTc">
         <div class="xui-i-item">
-            <label>删选日期：</label>
+            <label>筛选日期：</label>
             <input
                 type="text"
                 class="form-control xui-datePicker"
