--- a/weapp/static_v2/css/member.css
+++ b/weapp/static_v2/css/member.css
@@ -481,16 +481,154 @@
 .xui-emptyBox .xui-i-emptyHint span {
 	margin-top: 10px;
 }
-.xui-page-memberDetail .xui-emptyBox .xui-i-emptyHint {
 
-}
+
+
 .xui-page-memberDetail .xui-member-info-panel{
 	width: 996px;
-	min-height: 200px;
-	background-color: #EAEEF5;
-	padding-bottom: 25px;
+	min-height:150px;
+	border:1px solid #e5e5e5;
 }
-.xui-page-memberDetail .xui-btn-group .btn{
+.xui-page-memberDetail .xui-member-info-panel .xui-infoTop{
+	padding:30px 20px 30px 130px;
+	position: relative;
+	background: #f5f7ff;
+	border-bottom:1px solid #e5e5e5;
+}
+.xui-page-memberDetail .xui-infoTop .xui-membername{
+	font-size: 18px;
+	color:#333;
+	vertical-align: middle;
+	margin-right: 6px;
+}
+.xui-page-memberDetail .xui-img{
+	width: 70px;
+	height: 70px;
+	background-size: cover;
+	position: absolute;
+	left: 40px;
+	top:30px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+.xui-page-memberDetail .xui-borderBtn{
+	border: 1px solid #086cb2;
+    padding: 1px 10px;
+    color: #086cb2;
+    font-size: 12px;
+    border-radius: 9px;
+    font-weight: bold;
+    text-align: center;
+    margin-right: 5px;
+}
+.xui-page-memberDetail .xui-borderBtn:hover{
+	text-decoration: none;
+}
+.xui-page-memberDetail .form-control{
+	background: #f2f2f2;
+}
+.xui-page-memberDetail .xui-accounting dd{
+	width: 115px;
+	text-align: center;
+	float: left;
+	position: relative;
+}
+.xui-page-memberDetail .xui-accounting dd p{
+	margin-bottom:0;
+}
+.xui-page-memberDetail .xui-accounting dd p:first-child{
+	color:#f00;
+	font-weight: bold;
+	font-size: 14px;
+}
+.xui-page-memberDetail .xui-accounting dd p:nth-child(2){
+	color:#666;
+	font-size: 12px;
+}
+.xui-page-memberDetail .xui-accounting dd::after{
+	content: "";
+	display: inline-block;
+	width: 1px;
+	background: #d7d7d7;
+	height:20px;
+	position: absolute;
+	top: 8px;
+    right: 0;
+}
+.xui-page-memberDetail .xui-accounting dd:first-child,
+.xui-page-memberDetail .xui-accounting dd:last-child{
+	width: 100px;
+}
+.xui-page-memberDetail .xui-accounting dd:last-child::after{
+	display: none;
+	
+}
+.xui-page-memberDetail .xui-infoEdit{
+	padding:20px 20px 20px 40px;
+	position: relative;
+	min-height: 190px;
+}
+.xui-page-memberDetail .xui-infoEdit .xui-left{
+	border-right:1px solid #e5e5e5;
+	width: 390px;
+	box-sizing:border-box;
+	float: left;
+}
+.xui-page-memberDetail .xui-infoEdit .xui-right{
+	padding-left: 40px;
+	float: left;
+}
+.xui-page-memberDetail .xui-fieldwrap label{
+	width: 60px;
+	height: 28px;
+	line-height: 28px;
+	font-weight: normal;
+	margin-bottom: 0px;
+	color:#666;
+	float: left;
+}
+.xui-page-memberDetail .xui-value{
+	min-height: 28px;
+	line-height:28px;
+	margin-bottom: 0px;
+	display: inline-block;
+	color:#333;
+}
+.xui-page-memberDetail .xui-value input[type="radio"]{
+    vertical-align: middle;
+    margin-top: -2px;
+}
+.xui-page-memberDetail .xui-textarea-mark{
+	width: 440px;
+	height: 83px;
+	background-color: #f2f2f2;
+	border: 1px solid #aecfea;
+	font-size: 12px;
+}
+
+.xui-page-memberDetail .xui-btn-save{
+	background-color: #1D9119;
+	position: absolute;
+	top: 10px;
+	right: 20px;
+	border: none;
+	font-size: 14px;
+	margin: 0;
+	min-width: 66px;
+	height: 26px;
+	line-height: 26px;
+	padding: 0;
+}
+.xui-tagGroup{
+	display: inline-block;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    float: left;
+    max-width: 260px;
+    overflow: hidden;
+}
+
+/*.xui-page-memberDetail .xui-btn-group .btn{
  margin-top: 0px;
  margin-bottom:0px;
 }
@@ -557,22 +695,14 @@
 	clear: both;
 	margin-bottom: -12px;
 }
-.xui-page-memberDetail .xui-value{
-	width: 190px;
-	min-height: 30px;
-	float: right;
-	line-height:30px;
-		margin-bottom: 0px;
-}
+
 .xui-page-memberDetail .xui-value input[type="radio"]{
 	position: relative;
 	top:2px;
 }
-.xui-page-memberDetail .xui-fieldwrap
-{
+.xui-page-memberDetail .xui-fieldwrap{
 	width: 100%;
     min-height:30px;
-
 }
 
 
@@ -585,12 +715,7 @@
 
 }
 
-.xui-page-memberDetail .xui-img
-{
-	width: 41px !important;
-	height: 41px !important;
-	margin-left: 32px;
-}
+
 
 .xui-page-memberDetail .xui-content-top{
 	width: 100%;
@@ -667,22 +792,7 @@
 .xui-page-memberDetail .xui-span-address{
 	margin-left: 15px;
 }
-.xui-page-memberDetail .xui-textarea-mark
-{
-	width: 332px;
-	height: 121px;
-	background-color: #f2f2f2;
-	border: 1px solid #aecfea;
-}
 
-.xui-page-memberDetail .xui-btn-save
-{
-   margin-top: 119px;
-   background-color: #1D9119;
-   margin-bottom: 28px;
-   border:none;
-   font-weight: bold;
-}
 .xui-page-memberDetail  .xui-p-infowrap{
 	width: 300px;
 	height: 110px;
@@ -711,11 +821,11 @@
 	color:red;
 	font-weight: bold;
 	margin-right: 10px;
-}
+}*/
  .xui-memberOrderPayDialog  .logtable th,.xui-memberOrderPayDialog  .logtable td{
     width:33.3333%;
 }
-.xui-page-memberDetail  .xui-color-blue{
+/*.xui-page-memberDetail  .xui-color-blue{
 	color:#1183CA;
 	font-weight: bold;
 	margin-right: 10px;
@@ -743,7 +853,7 @@
 .xui-page-memberDetail .form-control{
 	width: 130px;
 }
-
+*/
 .xui-chooseCouponCount {
     line-height: 20px;
     display: inline-block;
